--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     
     <div class="first-section">
-      <div><img class="left-splash" src="image assets/jumiafood-homepage-left-splash-services.png" alt=""></div>
+      <div><img class="left-splash" src="Image Assets/jumiafood-homepage-left-splash-services.png" alt=""></div>
       <div class="middle-section">
         <div class="title">Everything you need, delivered now</div>
         <div class="location">
@@ -146,7 +146,7 @@
 
         </div>
       </div>
-      <div><img class="right-splash" src="image assets/jumiafood-homepage-right-splash-services.jpg" alt=""></div>
+      <div><img class="right-splash" src="Image Assets/jumiafood-homepage-right-splash-services.jpg" alt=""></div>
     </div>
 
     <div class="order-title">
