--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="middle-section">
         <div class="title">Everything you need, delivered now</div>
         <div class="location">
-          <img src="image assets/icon-location-on-map-no-shadow.svg" alt="">
+          <img src="Image Assets/icon-location-on-map-no-shadow.svg" alt="">
           <div> Delivering to <span>36 Oyo Road</span></div>
         </div>
         <div class="service">Choose a service</div>
